unpackaged/main/default/objects/Account/fields/Lender_Type__c.field-meta.xml
<CustomField>
    <fullName>Lender_Type__c</fullName>
    <description>What type of lender is this?
A Broker is a lender that pays us the points on the deals but does not offer us advanced payments as margin.
A Discounter purchases a stream of payments from us.  this stream of payments is less than the number of payments in the lease itself..</description>
    <inlineHelpText>What type of lender is this?
A Broker is a lender that pays us the points on the deals but does not offer us advanced payments as margin.
A Discounter purchases leszs than the full stream of payments from us.</inlineHelpText>
    <label>Lender Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Discounter</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>