unpackaged/main/default/objects/Account/fields/Lending_Application__c.field-meta.xml
<CustomField>
    <fullName>Lending_Application__c</fullName>
    <label>Lending Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>