unpackaged/main/default/objects/Account/fields/LendVantage_Id__c.field-meta.xml
<CustomField>
    <fullName>LendVantage_Id__c</fullName>
    <label>LendVantage Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>