unpackaged/main/default/objects/Account/fields/Loan_Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Loan_Propensity_Score__c</fullName>
    <label>Loan Propensity Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>