unpackaged/main/default/objects/Account/fields/LP_Cust_Number__c.field-meta.xml
<CustomField>
    <fullName>LP_Cust_Number__c</fullName>
    <description>The customer number assigned to this account for Lease Plus</description>
    <inlineHelpText>The customer number assigned to this account for Lease Plus</inlineHelpText>
    <label>Lease Plus No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>