unpackaged/main/default/objects/Account/fields/Marketing_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Sales_Volume__c</fullName>
    <description>Marketing Field Only - Captures Sales Volume Provided By Lead Vendor for Data and Statistical Modeling.</description>
    <inlineHelpText>Marketing Field Only - Captures Sales Volume Provided By Lead Vendor for Data and Statistical Modeling.</inlineHelpText>
    <label>Marketing - Sales Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>