unpackaged/main/default/objects/Account/fields/Marketing_Scrub_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Scrub_Status__c</fullName>
    <description>This field will be used to capture if a marketing scrub has taken place.</description>
    <inlineHelpText>This field will be used to capture if a marketing scrub has taken place.</inlineHelpText>
    <label>Marketing Scrub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete - Record Updated</fullName>
            </value>
            <value>
                <fullName>Complete - Retire Record</fullName>
            </value>
            <value>
                <fullName>Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>