unpackaged/main/default/objects/Account/fields/Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Strategy__c</fullName>
    <label>Marketing Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Cold-Calling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>