unpackaged/main/default/objects/Account/fields/MCA_Hot_Note__c.field-meta.xml
<CustomField>
    <fullName>MCA_Hot_Note__c</fullName>
    <description>MCA Reps can enter visible notes here</description>
    <inlineHelpText>MCA Reps can enter visible notes here</inlineHelpText>
    <label>MCA Hot Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>