unpackaged/main/default/objects/Account/fields/Merchant_Opportunities_Funded__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Opportunities_Funded__c</fullName>
    <description>This field is a count of all merchant opportunities that have funded for this account.</description>
    <inlineHelpText>This field is a count of all merchant opportunities that have funded for this account.</inlineHelpText>
    <label>Merchant Opportunities Funded</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>External Collections, Working Capital Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>