unpackaged/main/default/objects/Account/fields/Min_FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_FICO_Score__c</fullName>
    <label>Min FICO Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>