unpackaged/main/default/objects/Account/fields/Mktg_Pilot_Results__c.field-meta.xml
<CustomField>
    <fullName>Mktg_Pilot_Results__c</fullName>
    <description>This field will be used for the Telemarketing Efforts starting in Feb 2013</description>
    <label>TM Hot Leads Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>It's Mine</fullName>
            </value>
            <value>
                <fullName>Actively Being Worked by Other Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>