unpackaged/main/default/objects/Account/fields/MSA_Code__c.field-meta.xml
<CustomField>
    <fullName>MSA_Code__c</fullName>
    <description>This field will capture the MSA Code where a company is located.</description>
    <inlineHelpText>This field will capture the MSA Code where a company is located.</inlineHelpText>
    <label>MSA Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>