unpackaged/main/default/objects/Account/fields/MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>MSA_Name__c</fullName>
    <description>This field will capture the MSA Name where a company is located.</description>
    <inlineHelpText>This field will capture the MSA Name where a company is located.</inlineHelpText>
    <label>MSA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>