unpackaged/main/default/objects/Account/fields/National_Funding_WebId__c.field-meta.xml
<CustomField>
    <fullName>National_Funding_WebId__c</fullName>
    <displayFormat>NFSA-{000000}</displayFormat>
    <label>National Funding WebId</label>
    <type>AutoNumber</type>
</CustomField>