unpackaged/main/default/objects/Account/fields/Navigator_Sign_Up__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Sign_Up__c</fullName>
    <description>This field will capture the date/time that a broker was initially signed up for the Navigator program.  And it will be filled by workflow.</description>
    <inlineHelpText>This field will contain the date and time that a broker signed up for the navigator program.  This field will be populated by workflow.</inlineHelpText>
    <label>Navigator Sign Up</label>
    <type>DateTime</type>
</CustomField>