unpackaged/main/default/objects/Account/fields/Negative_News_Business__c.field-meta.xml
<CustomField>
    <fullName>Negative_News_Business__c</fullName>
    <label>Negative News- Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>