unpackaged/main/default/objects/Account/fields/Negative_News_PG__c.field-meta.xml
<CustomField>
    <fullName>Negative_News_PG__c</fullName>
    <label>Negative News – PG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>