unpackaged/main/default/objects/Account/fields/Newest_WC_Oppty_Funded__c.field-meta.xml
<CustomField>
    <fullName>Newest_WC_Oppty_Funded__c</fullName>
    <description>This field will indicate the most recent date that a working capital oppty was Funded.</description>
    <inlineHelpText>This field will indicate the most recent date that a working capital oppty was Funded.</inlineHelpText>
    <label>Newest WC Oppty Funded</label>
    <summarizedField>Opportunity.Fund_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Working Capital Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>NEW, CONCURRENT, Merchant</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>