unpackaged/main/default/objects/Account/fields/Newest_WC_Oppty_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Newest_WC_Oppty_Submitted__c</fullName>
    <description>This field will indicate the most recent date that a working capital oppty was submitted.</description>
    <inlineHelpText>This field will indicate the most recent date that a working capital oppty was submitted.</inlineHelpText>
    <label>Newest WC Oppty Submitted</label>
    <summarizedField>Opportunity.PreQual_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Working Capital Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>NEW, CONCURRENT, Merchant</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>