unpackaged/main/default/objects/Account/fields/Next_Activity_Note__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity_Note__c</fullName>
    <inlineHelpText>Enter a note related to the Collections Next Activity Date</inlineHelpText>
    <label>Next Activity Note</label>
    <type>TextArea</type>
</CustomField>