unpackaged/main/default/objects/Account/fields/NF_QB_Dual_Broker__c.field-meta.xml
<CustomField>
    <fullName>NF_QB_Dual_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NF &amp; QB Dual Broker</label>
    <type>Checkbox</type>
</CustomField>