unpackaged/main/default/objects/Account/fields/NF_Renewal_Rep__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previously was “NF Renewal Rep” but the “NF” was removed to make this field generic enough to support Quick Bridge renewals with working out of National Funding Salesforce.</description>
    <inlineHelpText>The renewal rep's name is entered in this field.</inlineHelpText>
    <label>Renewal Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>