unpackaged/main/default/objects/Account/fields/NF_Renewal_Rep_Fax__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rep_Fax__c</fullName>
    <formula>NF_Renewal_Rep__r.Fax</formula>
    <label>NF Renewal Rep Fax</label>
    <type>Text</type>
</CustomField>