unpackaged/main/default/objects/Account/fields/NF_Renewal_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rep_Phone__c</fullName>
    <formula>NF_Renewal_Rep__r.Phone</formula>
    <label>NF Renewal Rep Phone</label>
    <type>Text</type>
</CustomField>