unpackaged/main/default/objects/Account/fields/NF_WC_First_Funded__c.field-meta.xml
<CustomField>
    <fullName>NF_WC_First_Funded__c</fullName>
    <label>NF WC First Funded ($)</label>
    <summarizedField>Opportunity.Funded_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Working Capital Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Merchant_Number__c</field>
        <operation>startsWith</operation>
        <value>FWC</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Funded</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>NEW</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>