unpackaged/main/default/objects/Account/fields/Normalized_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Account_Name__c</fullName>
    <description>Cleansed account name after the webservice formats out special characters</description>
    <label>Normalized Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>