unpackaged/main/default/objects/Account/fields/Opener_Date__c.field-meta.xml
<CustomField>
    <fullName>Opener_Date__c</fullName>
    <description>This field will capture the date and time the opener first edited the lead. This field will be a formula field.</description>
    <inlineHelpText>This field will capture the date and time the opener first edited the lead. This field will be a formula field.</inlineHelpText>
    <label>Opener Date</label>
    <type>DateTime</type>
</CustomField>