unpackaged/main/default/objects/Account/fields/Out_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box indicates this account is no longer in business.</description>
    <inlineHelpText>Checking this box indicates this account is no longer in business.</inlineHelpText>
    <label>Out of Business</label>
    <type>Checkbox</type>
</CustomField>