unpackaged/main/default/objects/Account/fields/Partner_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Id__c</fullName>
    <description>Used to store the client ID for broker accounts participating in our Partner API PD-1364</description>
    <label>Partner Client Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>