unpackaged/main/default/objects/Account/fields/Past_Rep__c.field-meta.xml
<CustomField>
    <fullName>Past_Rep__c</fullName>
    <description>This field will indicate the past rep that the account was owned by.</description>
    <label>Past Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>John McKenzie</fullName>
            </value>
            <value>
                <fullName>Brent Park</fullName>
            </value>
            <value>
                <fullName>Phil Netro</fullName>
            </value>
            <value>
                <fullName>Chad DeGange</fullName>
            </value>
            <value>
                <fullName>2013.0116 Funded Reassign</fullName>
            </value>
            <value>
                <fullName>2013.0130 Funded Reasign - Kevin Emmert</fullName>
            </value>
            <value>
                <fullName>Christopher Roman</fullName>
            </value>
            <value>
                <fullName>Andrea Seals</fullName>
            </value>
            <value>
                <fullName>Jordan Keezell</fullName>
            </value>
            <value>
                <fullName>2013.0819 Funded Reassign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>