unpackaged/main/default/objects/Account/fields/Pending_Chargeoff__c.field-meta.xml
<CustomField>
    <fullName>Pending_Chargeoff__c</fullName>
    <description>Populated by Analytics</description>
    <inlineHelpText>Populated by Analytics</inlineHelpText>
    <label>Pending Chargeoff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>