unpackaged/main/default/objects/Account/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <description>Additional Phone Number for this account.</description>
    <inlineHelpText>Additional Phone Number for this account.</inlineHelpText>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>