unpackaged/main/default/objects/Account/fields/Phone_2_Trim__c.field-meta.xml
<CustomField>
    <fullName>Phone_2_Trim__c</fullName>
    <externalId>true</externalId>
    <label>Phone_2 Trim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>