unpackaged/main/default/objects/Account/fields/Phone_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_2_Type__c</fullName>
    <description>Type in who or what this corresponding phone number goes to.</description>
    <inlineHelpText>Type in who or what this corresponding phone number goes to.</inlineHelpText>
    <label>Phone 2 Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>