unpackaged/main/default/objects/Account/fields/Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_3__c</fullName>
    <description>Additional Phone Number for this account.</description>
    <inlineHelpText>Additional Phone Number for this account.</inlineHelpText>
    <label>Phone 3</label>
    <type>Phone</type>
</CustomField>