unpackaged/main/default/objects/Account/fields/Phone_3_Trim__c.field-meta.xml
<CustomField>
    <fullName>Phone_3_Trim__c</fullName>
    <externalId>true</externalId>
    <label>Phone 3 Trim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>