unpackaged/main/default/objects/Account/fields/Phone_4__c.field-meta.xml
<CustomField>
    <fullName>Phone_4__c</fullName>
    <description>Additional Phone Number for this account.</description>
    <inlineHelpText>Additional Phone Number for this account.</inlineHelpText>
    <label>Phone 4</label>
    <type>Phone</type>
</CustomField>