unpackaged/main/default/objects/Account/fields/Phone_4_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_4_Type__c</fullName>
    <description>Type in who or what this corresponding phone number goes too.</description>
    <inlineHelpText>Type in who or what this corresponding phone number goes too.</inlineHelpText>
    <label>Phone 4 Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>