unpackaged/main/default/objects/Account/fields/Prequals_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Prequals_per_Month__c</fullName>
    <label>Prequals per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>