unpackaged/main/default/objects/Account/fields/Previous_BK__c.field-meta.xml
<CustomField>
    <fullName>Previous_BK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates onoe or more contacts have had a bankruptcy on their credit report.</description>
    <inlineHelpText>Indicates onoe or more contacts have had a bankruptcy on their credit report.</inlineHelpText>
    <label>Previous_BK</label>
    <type>Checkbox</type>
</CustomField>