unpackaged/main/default/objects/Account/fields/QB_External_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID field to hold an ID needed by data engineering to tie together records to an external system. Originally created to support the data migration from QB Salesforce to NF Salesforce</description>
    <externalId>true</externalId>
    <label>QB External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>