unpackaged/main/default/objects/Account/fields/Refer_To_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Refer_To_From_Lead__c</fullName>
    <description>This field will capture referral data from the lead, specifically what product the lead was referred to.  It will be used in a formula field and a validation rule.</description>
    <inlineHelpText>This field will capture referral data from the lead, specifically what product the lead was referred to.  It will be used in a formula field and a validation rule.</inlineHelpText>
    <label>Refer To - From Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Equipment Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>