unpackaged/main/default/objects/Account/fields/Referred_Date_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referred_Date_From_Lead__c</fullName>
    <description>This field will capture referral data from the lead, specifically when the lead was referred.  It will be used in a formula field and a validation rule.</description>
    <inlineHelpText>This field will capture referral data from the lead, specifically when the lead was referred.  It will be used in a formula field and a validation rule.</inlineHelpText>
    <label>Referred Date - From Lead</label>
    <type>DateTime</type>
</CustomField>