unpackaged/main/default/objects/Account/fields/Refresh_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refresh Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_BrokerRefresh</relationshipName>
    <type>Lookup</type>
</CustomField>