unpackaged/main/default/objects/Account/fields/Regional_Business_Developer__c.field-meta.xml
<CustomField>
    <fullName>Regional_Business_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will contain a reference to a user who is the "Regional Business Developer"</description>
    <inlineHelpText>This field will contain a reference to a user who is the "Regional Business Developer"</inlineHelpText>
    <label>Regional Business Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Accounts_Regional_Biz_Developer</relationshipName>
    <type>Lookup</type>
</CustomField>