unpackaged/main/default/objects/Account/fields/Renewal_Grade__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Grade__c</fullName>
    <description>A letter grade (AA, A, B, C, D, F) which is calculated outside of Salesforce using refreshed Experian data</description>
    <label>Renewal Grade</label>
    <length>25</length>
    <type>Text</type>
</CustomField>