unpackaged/main/default/objects/Account/fields/Renewal_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Indicator__c</fullName>
    <label>Renewal Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>