unpackaged/main/default/objects/Account/fields/Renewal_Payoff_Debit_GL__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payoff_Debit_GL__c</fullName>
    <label>Renewal Payoff Debit GL#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>