unpackaged/main/default/objects/Account/fields/Rep_Owner_Date_Lease_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Rep_Owner_Date_Lease_Submitted__c</fullName>
    <formula>IF((Rep_Ownership_Date__c &gt; DATEVALUE(Newest_Lease_Oppty_Submitted__c)) || (TEXT(Newest_Lease_Oppty_Submitted__c) = ''), 'True', 'False')</formula>
    <label>Rep Owner Date &gt; Lease Submitted</label>
    <type>Text</type>
</CustomField>