unpackaged/main/default/objects/Account/fields/Resale_Number__c.field-meta.xml
<CustomField>
    <fullName>Resale_Number__c</fullName>
    <description>The account's resale number</description>
    <inlineHelpText>The account's resale number</inlineHelpText>
    <label>Resale Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>