unpackaged/main/default/objects/Account/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Internal Marketing Field</description>
    <inlineHelpText>Internal Marketing Field</inlineHelpText>
    <label>Response</label>
    <length>32</length>
    <type>Text</type>
</CustomField>